spacing fix

--- a/kifi-backend/modules/common/app/assets/stylesheets/search_blind_test.less
+++ b/kifi-backend/modules/common/app/assets/stylesheets/search_blind_test.less
@@ -36,3 +36,8 @@ table#hitsTable
 #result{
   color:blue;
 }
+
+input[type="radio"]{
+  margin-left: 5px;
+  margin-right: 5px;
+}
